# voidchess_engine_rs

./: .gitignore  Cargo.toml  README.md  build-and-benchmark  wasm-pack-and-copy-over  wasm-pack-and-copy-over_dev  wasm-pack-and-copy-over_release
docs/: index.html
docs/src/: index.js  worker_evaluate_move.js  worker_evaluate_position.js  worker_pool.js
docs/src/engine/: package.json  voidchess_engine_rs.d.ts  voidchess_engine_rs.js  voidchess_engine_rs_bg.wasm  voidchess_engine_rs_bg.wasm.d.ts  voidchess_engine_wasm.d.ts  voidchess_engine_wasm.js  voidchess_engine_wasm_bg.wasm  voidchess_engine_wasm_bg.wasm.d.ts
docs/src/libs/: babel-browser-build.js
src/: lib.rs  main.rs
src/base/: a_move.rs  errors.rs  list.rs  mod.rs  next_move.rs  position.rs  rc_list.rs
src/board/: mod.rs
src/engine/: evaluations.rs  min_max.rs  mod.rs
src/engine/evaluations/: frontend.rs  mod.rs  testing.rs
src/engine/min_max/: mod.rs  pruner.rs
src/engine/static_eval/: default.rs  mod.rs
src/figure/: functions.rs  mod.rs
src/figure/functions/: allowed.rs  castling.rs  check_search.rs  checkmate.rs  count_reachable.rs  mod.rs  reachable.rs
src/game/: board.rs  board_state.rs  game_state.rs  match_state.rs  mod.rs
src/js_interop/: mod.rs
workspace/benchmark/: main.rs
workspace/engine/: Cargo.toml
workspace/engine/benchmark/: main.rs
workspace/engine/src/: lib.rs
workspace/engine/src/base/: a_move.rs  direction.rs  position.rs  rc_list.rs
workspace/engine/src/engine/: mod.rs
workspace/engine/src/engine/evaluations/: frontend.rs  mod.rs  testing.rs
workspace/engine/src/engine/min_max/: mod.rs  pruner.rs
workspace/engine/src/engine/static_eval/: default.rs
workspace/engine/src/figure/: mod.rs
workspace/engine/src/figure/functions/: allowed.rs  castling.rs  check_search.rs  checkmate.rs  count_reachable.rs  mod.rs  reachable.rs
workspace/engine/src/game/: board.rs  board_state.rs  game_state.rs  mod.rs
workspace/wasm/: Cargo.toml
workspace/wasm/src/: lib.rs
