[package]
name = "voidchess_engine_rs"
version = "0.0.1"
authors = ["StephanS <simon.void+github@gmail.com>"]
description = "a hobby chess engine and wasm boilerplate"
repository = "https://github.com/simon-void/voidchess_engine_rs"
edition = "2021"
rust = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rstest = "0.6.4"
tinyvec  = { version = "1.0.1", features = ["alloc"] }
rand = { version = "0.7", features = ["stdweb", "wasm-bindgen"] }
wasm-bindgen = "0.2.68"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.45"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
incremental = true
