[package]
name = "engine_core"
version = "0.0.1"
authors = ["StephanS <simon.void+github@gmail.com>"]
description = "a hobby chess engine and wasm boilerplate"
license = "MIT"
repository = "https://github.com/simon-void/voidchess_engine_rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5"}
rstest = "0.18.2"
rstring-builder = "0.1.4"
tinyvec  = { version = "1.6.0", features = ["alloc"] }
