[package]
name = "voidchess_engine_wasm"
version = "0.1.0"
edition = "2024"

description = "PoC of splitting Rust code to be compiled to wasm into workspaces"
repository = "https://github.com/simon-void/wasm_from_rust_workspaces"
#license = ""

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
engine_core = { path = "../engine" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# So it's included by default (see [features] section),
# but excluded in release build (see wasm-pack-and-copy-over_release shell script)
console_error_panic_hook = { version = "0.1.7", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.77"
features = ["console"]